hierarchical and kmode

--- a/clustering.ipynb
+++ b/clustering.ipynb
@@ -411,7 +411,7 @@
     }
    ],
    "source": [
-    "df_bank_bruto = pd.read_csv('/home/lucas/Documentos/Projetos_PUCSP/Eric/cluster_Bank_Marketing/bank.csv', sep=';')\n",
+    "df_bank_bruto = pd.read_csv('bank.csv', sep=';')\n",
     "df_bank_bruto"
    ]
   },
